--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       <a href="https://github.com/Nogylop/front-of-reddit" class="btn">View on GitHub</a>
     </section>  
   </body>
-=======
 
 <!doctype html>
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8">
-		<title>Is YhCHKN on the front page of reddit?</title>
+		<title></title>
 		<style>
 			body {
 				text-align: center;
@@ -80,5 +79,4 @@
 			} );
 		</script>
 	</body>
->>>>>>> refs/remotes/origin/master
 </html>
