--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Front-of-reddit by Nogylop</title>
+    <title>reddit check</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -71,7 +71,7 @@
 						}
 					} )
 					if ( !isFront ) {
-						$('#answer').text('no.');
+						$('#answer').text('not yet <|:^).');
 					}
 				} );
 			} );
