changed yes response
YEH BOI

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					$.each( posts, function( i, post ) {
 						var author = post.data.author;
 						if ( author === 'YhCHKN' ) {
-							$('#answer').text('yes.');
+							$('#answer').text('YEH BOI.');
 							$('#posts').append(
 								$('<li>').append(
 									$('<a>')
